Walk navigation crosshair gets hidden behind objects #73793

Closed
opened 2020-02-14 08:45:13 +01:00 by Alex · 8 comments

System Information
Intel Core i7, 16 Gb RAM, NVidia GeForce 2070 RTX
Windows 10 x64

Blender Version
Broken: 2.83 4af74f453d from 2020-02-13
Worked: 2.83 5df494d75c from 2020-01-27

Short description of error
Walk navigation crosshair gets hidden behind polygonal objects when you point the crosshair at them. This makes teleporting very problematic especially when you have to point at small objects.

Exact steps for others to reproduce the error

  1. Open Blender, activate walk navigation, point the crosshair at the default Cube and it will get hidden behind an object instead of being in front of it. In earlier build from several days ago everything works fine.
**System Information** Intel Core i7, 16 Gb RAM, NVidia GeForce 2070 RTX Windows 10 x64 **Blender Version** Broken: 2.83 4af74f453d4e from 2020-02-13 Worked: 2.83 5df494d75c9a from 2020-01-27 **Short description of error** Walk navigation crosshair gets hidden behind polygonal objects when you point the crosshair at them. This makes teleporting very problematic especially when you have to point at small objects. **Exact steps for others to reproduce the error** 1. Open Blender, activate walk navigation, point the crosshair at the default Cube and it will get hidden behind an object instead of being in front of it. In earlier build from several days ago everything works fine.
Author

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Clément Foucault was assigned by Campbell Barton 2020-02-15 06:02:02 +01:00

This issue was referenced by b117b8e818

This issue was referenced by b117b8e81829fa8e807159e2a5899d0896ea09c6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

It looks like the problem with Walk Navigation crosshair opacity have returned in 2.91 Beta b0f34eee30 from 2020-10-21 @fclem should I reopen this report or open a new one?
CrosshairAlpha.jpg

It looks like the problem with Walk Navigation crosshair opacity have returned in 2.91 Beta b0f34eee30c4 from 2020-10-21 @fclem should I reopen this report or open a new one? ![CrosshairAlpha.jpg](https://archive.blender.org/developer/F9034452/CrosshairAlpha.jpg)

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

This issue was referenced by e58285dc1d

This issue was referenced by e58285dc1dc41312e9514963320648a0422c2ecb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73793
No description provided.