Fix T73793 Walk navigation crosshair gets hidden behind objects

This is a bug that the recent refactor exposed. Some widgets were drawing
with alpha set to 0.