source/blender/editors/mesh/editmesh_knife.c
@@ -1031,7 +1031,7 @@ static void knifetool_draw_angle_snapping(const KnifeTool_OpData *kcd)
   uint pos = GPU_vertformat_attr_add(immVertexFormat(), "pos", GPU_COMP_F32, 3, GPU_FETCH_FLOAT);
 
   immBindBuiltinProgram(GPU_SHADER_3D_UNIFORM_COLOR);
-  immUniformThemeColor(TH_TRANSFORM);
+  immUniformThemeColor3(TH_TRANSFORM);
   GPU_line_width(2.0);
 
   immBegin(GPU_PRIM_LINES, 2);
